# autotuner

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: joints.yaml
launch/: rviz.launch  simulation.launch  spawn.launch  spawn_eemass.launch
meshes/: Link_1.STL  Link_2.STL  base_link.STL
script/: get_arm_state_client.py  get_track_state_client.py  move_to_devel.sh  plot_simulation_data.py  plot_tracking_error.py  run_simulation_1.py  run_simulation_2.py  set_track_speeds_client.py
script/SimulationData/: sim_data_chassis.csv  sim_data_joint1.csv  sim_data_joint2.csv  sim_data_joint3.csv
script/SimulationData/BothData/: sim_data_joint1.csv  sim_data_joint2.csv  sim_data_joint3.csv
script/TrajectoryPlanner/: AdjustedJacobian.py  DynamicsGravityVariation.py  DynamicsInteraction.py  DynamicsInteractionConstants.csv  DynamicsInteractionDampConstants.csv  DynamicsInteractionPlots.py  DynamicsInteractionRadiusConstants.csv  DynamicsInteractionSimulation.py  DynamicsInteractionStiffConstants.csv  DynamicsInteractionTrajectory.csv  DynamicsInteractionTrajectory_default.csv  DynamicsInteractionTrajectory_interact.csv  DynamicsInteractionTrajectory_test.csv  DynamicsInteractionVisualizer.py  DynamicsMassConstants.csv  DynamicsMassConstants_highres.csv  DynamicsMassPlots.py  DynamicsMassVariation.py  FrequencyResponseLinearized.py  GenerateConstants.py  GenerateGainBounds.py  GenerateGainsConstants.csv  GeneratePlots.py  README.txt  SuspensionMatrices.py  active3d.eps  lowerboundkd.eps  lowerboundkp.eps  passive3d.eps  planned_trajectory3.csv  planned_trajectory_withmass.csv  planner_3D_scipy.py  robot_controlsim_v3 (copy).urdf  robot_controlsim_v3.urdf  robot_sim.xml  robot_visualize.xml  scipy.optimize
src/: set_speed_joint_plugin.cpp  set_trackfriction_plugin.cpp
urdf/: agrobot_arm_v2.urdf  links_joints.xacro  robot.xacro  robot_controlsim_v3_withSTL.urdf  robot_eemass.xacro  robot_eemass_parameters.txt  robot_original.xacro
(+33 files in other folders)
